# Epidemic-Simulator

./: README.md  al.py  index.html  package.json
backend/: analyzer.py  main.py  report.py  requirements.txt  runner.py
backend/data/: cdc_flu_2023.csv
engine/: CMakeLists.txt  agent.cpp  agent.h  main.cpp  network.cpp  sir.cpp  sir.h
frontend/: package-lock.json
frontend/src/: index.css
frontend/src/components/: CDCCompareChart.jsx  SIRChart.jsx  SimControls.jsx
src/: App.jsx
src/components/: OutbreakReport.jsx
